# bazel-exercise

./: .gitignore  BUILD  BUILD.bazel  Makefile  README.md  WORKSPACE
.github/workflows/: blank.yml
lib/go/: BUILD.bazel  logger.go  logger_test.go
pkg/go/: BUILD.bazel  go.mod  main_test.go
pkg/go2/: BUILD.bazel  docker-compose.yml  go.mod  go.sum  main.go  main_test.go
pkg/node/: BUILD.bazel  WORKSPACE.bazel  main.js  package.json
src/go/: BUILD.bazel  go.sum  main.go
