load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["logger.go"],
    importpath = "github.com/takashabe/bazel-exercise/lib/go",
    visibility = ["//visibility:public"],
    deps = ["//lib/go/vendor/github.com/sirupsen/logrus:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["logger_test.go"],
    embed = [":go_default_library"],
)
