load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/takashabe/bazel-exercise/pkg/go",
    visibility = ["//visibility:private"],
    deps = ["//pkg/go/vendor/github.com/k0kubun/pp:go_default_library"],
)

go_binary(
    name = "go",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = ["//pkg/go/vendor/github.com/google/go-cmp/cmp:go_default_library"],
)
