load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/takashabe/bazel-exercise/pkg/go2",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "go2",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/go2/vendor/github.com/sirupsen/logrus:go_default_library",
        "//pkg/go2/vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
